--- a/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
+++ b/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
@@ -18,47 +18,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xcr-Qi-3Mj">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xcr-Qi-3Mj">
                                 <rect key="frame" x="0.0" y="72" width="600" height="433"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="505" id="XOl-bT-Fqb"/>
                                     <constraint firstAttribute="width" constant="600" id="mG0-He-QCn"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-Bo-iOa">
-                                <rect key="frame" x="20" y="513" width="560" height="30"/>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" misplaced="YES" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-Bo-iOa">
+                                <rect key="frame" x="20" y="513" width="560" height="22"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-cp-rXv">
-                                        <rect key="frame" x="0.0" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-cp-rXv">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="22"/>
+                                        <state key="normal" title=" Blue" image="LedBlue">
+                                            <color key="titleColor" red="0.18823529411764706" green="0.6470588235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="resetButton:" destination="Id8-np-TXg" eventType="touchUpInside" id="GWh-CP-C1k"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNO-Hh-LC5">
-                                        <rect key="frame" x="129" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNO-Hh-LC5">
+                                        <rect key="frame" x="104" y="0.0" width="95" height="22"/>
+                                        <state key="normal" title=" Magenta" image="LedMagenta">
+                                            <color key="titleColor" red="0.9882352941176471" green="0.16470588235294117" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonMagenta:" destination="Id8-np-TXg" eventType="touchUpInside" id="wUN-6q-RnK"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-I6-Cm9">
-                                        <rect key="frame" x="257" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-I6-Cm9">
+                                        <rect key="frame" x="242" y="0.0" width="73" height="22"/>
+                                        <state key="normal" title=" Green" image="LedGreen">
+                                            <color key="titleColor" red="0.45882352941176469" green="1" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonGreen:" destination="Id8-np-TXg" eventType="touchUpInside" id="V1V-Zi-LjF"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QI7-e4-J49">
-                                        <rect key="frame" x="386" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QI7-e4-J49">
+                                        <rect key="frame" x="358" y="0.0" width="75" height="22"/>
+                                        <state key="normal" title=" Yellow" image="LedYellow">
+                                            <color key="titleColor" red="0.6588235294117647" green="0.70588235294117652" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonYellow:" destination="Id8-np-TXg" eventType="touchUpInside" id="2bD-Qp-Kzi"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRb-OU-PAs">
-                                        <rect key="frame" x="514" y="0.0" width="46" height="30"/>
-                                        <state key="normal" title="Button"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRb-OU-PAs">
+                                        <rect key="frame" x="476" y="0.0" width="84" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title=" Orange" image="LedOrange">
+                                            <color key="titleColor" red="0.99215686274509807" green="0.71372549019607845" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
                                         <connections>
                                             <action selector="buttonOrange:" destination="Id8-np-TXg" eventType="touchUpInside" id="tPX-wy-ttu"/>
                                         </connections>
@@ -262,6 +273,11 @@
     </scenes>
     <resources>
         <image name="InstagramIcon" width="19" height="19"/>
+        <image name="LedBlue" width="19" height="19"/>
+        <image name="LedGreen" width="19" height="19"/>
+        <image name="LedMagenta" width="19" height="19"/>
+        <image name="LedOrange" width="19" height="19"/>
+        <image name="LedYellow" width="19" height="19"/>
         <image name="ProductFeaturesIcon" width="24" height="19"/>
         <image name="StoreLocatorIcon" width="13" height="19"/>
         <image name="VideoIcon" width="23" height="17"/>
