--- a/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
+++ b/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
@@ -17,87 +17,13 @@
                     <view key="view" contentMode="scaleToFill" id="kZr-AH-FPZ">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xcr-Qi-3Mj">
-                                <rect key="frame" x="0.0" y="72" width="600" height="433"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="505" id="XOl-bT-Fqb"/>
-                                    <constraint firstAttribute="width" constant="600" id="mG0-He-QCn"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" misplaced="YES" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="hLy-Bo-iOa">
-                                <rect key="frame" x="20" y="513" width="560" height="22"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-cp-rXv">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="22"/>
-                                        <state key="normal" title=" Blue" image="LedBlue">
-                                            <color key="titleColor" red="0.18823529411764706" green="0.6470588235294118" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="resetButton:" destination="Id8-np-TXg" eventType="touchUpInside" id="GWh-CP-C1k"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNO-Hh-LC5">
-                                        <rect key="frame" x="104" y="0.0" width="95" height="22"/>
-                                        <state key="normal" title=" Magenta" image="LedMagenta">
-                                            <color key="titleColor" red="0.9882352941176471" green="0.16470588235294117" blue="0.65098039215686276" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonMagenta:" destination="Id8-np-TXg" eventType="touchUpInside" id="wUN-6q-RnK"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d4f-I6-Cm9">
-                                        <rect key="frame" x="242" y="0.0" width="73" height="22"/>
-                                        <state key="normal" title=" Green" image="LedGreen">
-                                            <color key="titleColor" red="0.45882352941176469" green="1" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonGreen:" destination="Id8-np-TXg" eventType="touchUpInside" id="V1V-Zi-LjF"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QI7-e4-J49">
-                                        <rect key="frame" x="358" y="0.0" width="75" height="22"/>
-                                        <state key="normal" title=" Yellow" image="LedYellow">
-                                            <color key="titleColor" red="0.6588235294117647" green="0.70588235294117652" blue="0.027450980392156862" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonYellow:" destination="Id8-np-TXg" eventType="touchUpInside" id="2bD-Qp-Kzi"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gRb-OU-PAs">
-                                        <rect key="frame" x="476" y="0.0" width="84" height="22"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <state key="normal" title=" Orange" image="LedOrange">
-                                            <color key="titleColor" red="0.99215686274509807" green="0.71372549019607845" blue="0.27450980392156865" alpha="1" colorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="buttonOrange:" destination="Id8-np-TXg" eventType="touchUpInside" id="tPX-wy-ttu"/>
-                                        </connections>
-                                    </button>
-                                </subviews>
-                            </stackView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="Xcr-Qi-3Mj" secondAttribute="trailing" constant="-20" id="3TA-s5-Ja3"/>
-                            <constraint firstItem="Xcr-Qi-3Mj" firstAttribute="leading" secondItem="kZr-AH-FPZ" secondAttribute="leadingMargin" constant="-20" id="FrL-GN-ade"/>
-                            <constraint firstItem="hLy-Bo-iOa" firstAttribute="leading" secondItem="kZr-AH-FPZ" secondAttribute="leadingMargin" id="JFp-Kf-gSu"/>
-                            <constraint firstItem="Xcr-Qi-3Mj" firstAttribute="leading" secondItem="kZr-AH-FPZ" secondAttribute="leadingMargin" constant="-20" id="NLT-cY-VMC"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="hLy-Bo-iOa" secondAttribute="trailing" id="WEW-3k-XVL"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Xcr-Qi-3Mj" secondAttribute="trailing" constant="-20" id="d0q-UF-ZrG"/>
-                            <constraint firstItem="hLy-Bo-iOa" firstAttribute="top" secondItem="Xcr-Qi-3Mj" secondAttribute="bottom" constant="8" id="n1c-hP-0gq"/>
-                            <constraint firstItem="Xcr-Qi-3Mj" firstAttribute="top" secondItem="1c4-Kk-JsT" secondAttribute="bottom" constant="8" id="pnU-xG-Bj3"/>
-                            <constraint firstItem="o3K-jb-fCG" firstAttribute="top" secondItem="hLy-Bo-iOa" secondAttribute="bottom" constant="8" id="syl-mj-QZw"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Features" image="ProductFeaturesIcon" id="NzC-SU-3Ok"/>
-                    <connections>
-                        <outlet property="imageview" destination="Xcr-Qi-3Mj" id="hh7-m9-yQw"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eI0-WX-gZn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="407" y="607"/>
+            <point key="canvasLocation" x="427" y="607"/>
         </scene>
         <!--Videos-->
         <scene sceneID="8Xs-Ej-7Gj">
@@ -154,7 +80,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ek6-kI-9Fo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1077" y="607"/>
+            <point key="canvasLocation" x="2473" y="607"/>
         </scene>
         <!--Instagram-->
         <scene sceneID="WXp-PF-j86">
@@ -173,26 +99,94 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7BU-gM-zAk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1748" y="607"/>
+            <point key="canvasLocation" x="1788" y="607"/>
         </scene>
         <!--Overview-->
         <scene sceneID="qF5-bU-mxN">
             <objects>
-                <viewController id="S2q-IT-Bqz" userLabel="Overview" customClass="SliderViewController" customModule="Turntablism" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="S2q-IT-Bqz" userLabel="Overview" customClass="DemoViewController" customModule="Turntablism" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="UTJ-tI-Tec"/>
-                        <viewControllerLayoutGuide type="bottom" id="5C2-Tu-hzK"/>
+                        <viewControllerLayoutGuide type="top" id="flW-5u-JGL"/>
+                        <viewControllerLayoutGuide type="bottom" id="DaQ-eb-av1"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleAspectFit" id="bbM-gm-spC">
+                    <view key="view" contentMode="scaleToFill" id="DIe-Cp-71Q">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-cX-KuY">
+                                <rect key="frame" x="0.0" y="72" width="600" height="389"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="8lR-Qw-1gE">
+                                <rect key="frame" x="31" y="489" width="539" height="22"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2A-3d-vWC">
+                                        <rect key="frame" x="0.0" y="0.0" width="95" height="22"/>
+                                        <state key="normal" title=" Blue" image="LedBlue">
+                                            <color key="titleColor" red="0.18823529410000001" green="0.64705882349999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="resetButton:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="G3i-k5-Uq9"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twC-sf-A0P">
+                                        <rect key="frame" x="111" y="0.0" width="95" height="22"/>
+                                        <state key="normal" title=" Magenta" image="LedMagenta">
+                                            <color key="titleColor" red="0.98823529409999999" green="0.1647058824" blue="0.65098039220000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonMagenta:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="QZ9-Vr-635"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUl-2M-kU7">
+                                        <rect key="frame" x="222" y="0.0" width="95" height="22"/>
+                                        <state key="normal" title=" Green" image="LedGreen">
+                                            <color key="titleColor" red="0.45882352939999999" green="1" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonGreen:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="RQI-S9-r1n"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="emj-07-VEX">
+                                        <rect key="frame" x="333" y="0.0" width="95" height="22"/>
+                                        <state key="normal" title=" Yellow" image="LedYellow">
+                                            <color key="titleColor" red="0.6588235294" green="0.70588235290000001" blue="0.027450980390000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonYellow:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="1B7-l2-WSF"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vbY-ai-2NV">
+                                        <rect key="frame" x="444" y="0.0" width="95" height="22"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <state key="normal" title=" Orange" image="LedOrange">
+                                            <color key="titleColor" red="0.99215686270000003" green="0.71372549019999998" blue="0.27450980390000002" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="buttonOrange:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="8bE-hb-ieN"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="8lR-Qw-1gE" secondAttribute="trailing" constant="10" id="5s4-y9-YGh"/>
+                            <constraint firstItem="DaQ-eb-av1" firstAttribute="top" secondItem="8lR-Qw-1gE" secondAttribute="bottom" constant="40" id="8hk-9m-8vQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BcQ-cX-KuY" secondAttribute="trailing" constant="-20" id="R3a-6Y-cLj"/>
+                            <constraint firstItem="8lR-Qw-1gE" firstAttribute="leading" secondItem="DIe-Cp-71Q" secondAttribute="leadingMargin" constant="11" id="ofF-nF-QgY"/>
+                            <constraint firstItem="BcQ-cX-KuY" firstAttribute="top" secondItem="flW-5u-JGL" secondAttribute="bottom" constant="8" id="u11-ha-Cnl"/>
+                            <constraint firstItem="8lR-Qw-1gE" firstAttribute="top" secondItem="BcQ-cX-KuY" secondAttribute="bottom" constant="28" id="vCf-Hk-qj5"/>
+                            <constraint firstItem="BcQ-cX-KuY" firstAttribute="leading" secondItem="DIe-Cp-71Q" secondAttribute="leadingMargin" constant="-20" id="vi6-52-MYl"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" id="m1N-gF-siw"/>
+                    <connections>
+                        <outlet property="imageview" destination="BcQ-cX-KuY" id="gNR-EA-bha"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LRp-xn-dXS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2447" y="607"/>
+            <point key="canvasLocation" x="1097" y="607"/>
         </scene>
         <!--Store Locator-->
         <scene sceneID="8Xs-cu-J42">
@@ -268,7 +262,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0bT-Em-noB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="813" y="-227"/>
+            <point key="canvasLocation" x="797" y="-227"/>
         </scene>
     </scenes>
     <resources>
