--- a/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
+++ b/xcode/Turntablism/Turntablism/Base.lproj/Main.storyboard
@@ -143,13 +143,13 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                         <viewControllerLayoutGuide type="bottom" id="DaQ-eb-av1"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DIe-Cp-71Q">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-cX-KuY">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BcQ-cX-KuY">
                                 <rect key="frame" x="0.0" y="72" width="600" height="389"/>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="8lR-Qw-1gE">
+                            <stackView opaque="NO" contentMode="scaleAspectFit" misplaced="YES" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="8lR-Qw-1gE">
                                 <rect key="frame" x="31" y="489" width="539" height="22"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2A-3d-vWC">
@@ -200,12 +200,43 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n2I-rM-6WS">
+                                <rect key="frame" x="486" y="92" width="71" height="22"/>
+                                <state key="normal" title=" Share" image="FacebookIcon">
+                                    <color key="titleColor" red="0.062745098039215685" green="0.0" blue="0.83137254901960789" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareButton:" destination="S2q-IT-Bqz" eventType="touchUpInside" id="aWs-6X-93o"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="pcj-jl-x0T">
+                                <rect key="frame" x="508" y="153" width="49" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Model" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u5A-RB-L2o">
+                                        <rect key="frame" x="0.0" y="0.0" width="49" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="mko-rv-w3G">
+                                        <rect key="frame" x="0.0" y="33" width="51" height="31"/>
+                                        <color key="onTintColor" red="0.83541637659072876" green="0.68664735555648804" blue="0.21575361490249634" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="modelChanged:" destination="S2q-IT-Bqz" eventType="valueChanged" id="sN3-0D-fl5"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="8lR-Qw-1gE" secondAttribute="trailing" constant="10" id="5s4-y9-YGh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="n2I-rM-6WS" secondAttribute="trailing" constant="23" id="6GV-G8-g2z"/>
                             <constraint firstItem="DaQ-eb-av1" firstAttribute="top" secondItem="8lR-Qw-1gE" secondAttribute="bottom" constant="40" id="8hk-9m-8vQ"/>
+                            <constraint firstItem="pcj-jl-x0T" firstAttribute="top" secondItem="n2I-rM-6WS" secondAttribute="bottom" constant="39" id="GIN-Dd-Prm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="BcQ-cX-KuY" secondAttribute="trailing" constant="-20" id="R3a-6Y-cLj"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="pcj-jl-x0T" secondAttribute="trailing" constant="23" id="Tky-DN-PSs"/>
+                            <constraint firstItem="n2I-rM-6WS" firstAttribute="top" secondItem="flW-5u-JGL" secondAttribute="bottom" constant="28" id="jYf-GI-AB5"/>
                             <constraint firstItem="8lR-Qw-1gE" firstAttribute="leading" secondItem="DIe-Cp-71Q" secondAttribute="leadingMargin" constant="11" id="ofF-nF-QgY"/>
                             <constraint firstItem="BcQ-cX-KuY" firstAttribute="top" secondItem="flW-5u-JGL" secondAttribute="bottom" constant="8" id="u11-ha-Cnl"/>
                             <constraint firstItem="8lR-Qw-1gE" firstAttribute="top" secondItem="BcQ-cX-KuY" secondAttribute="bottom" constant="28" id="vCf-Hk-qj5"/>
@@ -213,6 +244,8 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" id="m1N-gF-siw"/>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imageview" destination="BcQ-cX-KuY" id="gNR-EA-bha"/>
                     </connections>
@@ -299,6 +332,7 @@ See all specifications at http://www.pioneerdj.com/en/product/turntable/plx-1000
         </scene>
     </scenes>
     <resources>
+        <image name="FacebookIcon" width="19" height="19"/>
         <image name="InstagramIcon" width="19" height="19"/>
         <image name="LedBlue" width="19" height="19"/>
         <image name="LedGreen" width="19" height="19"/>
